# GSaPDef

./: .gitignore  README.md  build_install.sh  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md
docs/api/: chem.md  layer.md  material.md  profile.md
src/gsapdef/: __init__.py  chem.py  layer.py  material.py  profile.py
src/layermodels/models/: auto.py  layer.py  material.py  profile.py  setup.py  simulation.py  specs.py  static.py
src/samplmodls/: layer.py  material.py  profile.py
testing/: test_chem.py  test_layer.py  test_material.py  test_profile.py
