[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gsapdef"
version = "25.12.3"
authors = [
    { name="David Capalbo", email="david.capalbo@uni-konstanz.de" }
]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13.7"
dependencies = [
    "returns[compatible-mypy]>=0.26.0",
]
